--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #1A3A5C;
 }
 
@@ -31,5 +31,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
